--- a/site/tests/index.html
+++ b/site/tests/index.html
@@ -710,7 +710,13 @@
 <span class="normal"><a href="#__codelineno-0-74">74</a></span>
 <span class="normal"><a href="#__codelineno-0-75">75</a></span>
 <span class="normal"><a href="#__codelineno-0-76">76</a></span>
-<span class="normal"><a href="#__codelineno-0-77">77</a></span></pre></div></td><td class="code"><div><pre><span></span><code><a id="__codelineno-0-58" name="__codelineno-0-58"></a><span class="k">def</span> <span class="nf">test_a_stop</span><span class="p">(</span><span class="n">fixture_for_power</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
+<span class="normal"><a href="#__codelineno-0-77">77</a></span>
+<span class="normal"><a href="#__codelineno-0-78">78</a></span>
+<span class="normal"><a href="#__codelineno-0-79">79</a></span>
+<span class="normal"><a href="#__codelineno-0-80">80</a></span>
+<span class="normal"><a href="#__codelineno-0-81">81</a></span>
+<span class="normal"><a href="#__codelineno-0-82">82</a></span>
+<span class="normal"><a href="#__codelineno-0-83">83</a></span></pre></div></td><td class="code"><div><pre><span></span><code><a id="__codelineno-0-58" name="__codelineno-0-58"></a><span class="k">def</span> <span class="nf">test_a_stop</span><span class="p">(</span><span class="n">fixture_for_power</span><span class="p">:</span> <span class="nb">tuple</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="kc">None</span><span class="p">:</span>
 <a id="__codelineno-0-59" name="__codelineno-0-59"></a><span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <a id="__codelineno-0-60" name="__codelineno-0-60"></a><span class="sd">    Test &quot;three jobs for one scheduler&quot;</span>
 <a id="__codelineno-0-61" name="__codelineno-0-61"></a>
@@ -730,6 +736,12 @@
 <a id="__codelineno-0-75" name="__codelineno-0-75"></a>    <span class="n">scheduler</span><span class="o">.</span><span class="n">run</span><span class="p">()</span>
 <a id="__codelineno-0-76" name="__codelineno-0-76"></a>    <span class="n">sleep</span><span class="p">(</span><span class="mi">3</span><span class="o">*</span><span class="n">TICK</span><span class="p">)</span>
 <a id="__codelineno-0-77" name="__codelineno-0-77"></a>    <span class="n">scheduler</span><span class="o">.</span><span class="n">stop</span><span class="p">()</span>
+<a id="__codelineno-0-78" name="__codelineno-0-78"></a>    <span class="n">sleep</span><span class="p">(</span><span class="mi">8</span><span class="o">*</span><span class="n">TICK</span><span class="p">)</span>
+<a id="__codelineno-0-79" name="__codelineno-0-79"></a>    <span class="k">del</span> <span class="n">scheduler</span>
+<a id="__codelineno-0-80" name="__codelineno-0-80"></a>    <span class="n">scheduler_new</span> <span class="o">=</span> <span class="n">Scheduler</span><span class="p">()</span>
+<a id="__codelineno-0-81" name="__codelineno-0-81"></a>    <span class="n">scheduler_new</span><span class="o">.</span><span class="n">restart</span><span class="p">()</span>
+<a id="__codelineno-0-82" name="__codelineno-0-82"></a>    <span class="n">sleep</span><span class="p">(</span><span class="n">TICK</span><span class="p">)</span>
+<a id="__codelineno-0-83" name="__codelineno-0-83"></a>    <span class="n">scheduler_new</span><span class="o">.</span><span class="n">process</span><span class="o">.</span><span class="n">join</span><span class="p">()</span>
 </code></pre></div></td></tr></table></div>
           </details>
   </div>
