basic test for filesystem and reading is created

--- a/site/index.html
+++ b/site/index.html
@@ -536,7 +536,7 @@
 <p>Документация по этому проекту доступна благодаря использованию документатора MkDocs.</p>
 <ul>
 <li>
-<p>Посмотреть документацию к этому проекту по второму спринту онлайн <a href="https://e-io.github.io/async-python-sprint-2/">e-io.github.io/async-python-sprint-2</a></p>
+<p>Посмотреть документацию к этому проекту по второму спринту онлайн <a href="https://e-io.github.io/async-python-sprint-2/how-to-guides/">e-io.github.io/async-python-sprint-2</a></p>
 </li>
 <li>
 <p>Посмотреть офлайн:</p>
@@ -551,23 +551,29 @@
 </code></pre></div></p>
 <h2 id="_3">Описание задания</h2>
 <p><strong>1. Описать реализацию класса <code>Scheduler</code>.</strong></p>
-<p>Условия и требования:
-- Планировщик одновременно может выполнять до 10 задач (дефолтное значение, может быть изменено).
-- Возможность добавить задачу в планировщик и запустить её в рамках ограничений планировщика и настроек, указанных в задаче.
-- При штатном завершении работы планировщик сохраняет статус выполняемых и ожидающих задач.
-- После рестарта восстанавливается последнее состояние и задачи продолжают выполняться.</p>
+<p>Условия и требования:</p>
+<ul>
+<li>Планировщик одновременно может выполнять до 10 задач (дефолтное значение, может быть изменено).</li>
+<li>Возможность добавить задачу в планировщик и запустить её в рамках ограничений планировщика и настроек, указанных в задаче.</li>
+<li>При штатном завершении работы планировщик сохраняет статус выполняемых и ожидающих задач.</li>
+<li>После рестарта восстанавливается последнее состояние и задачи продолжают выполняться.</li>
+</ul>
 <p><strong>2. Описать реализацию класса <code>Job</code>.</strong></p>
-<p>Условия и требования:
-- У задачи может быть указана длительность выполнения (опциональный параметр). Если параметр указан, то задача прекращает выполняться, если время выполнения превысило указанный параметр.
-- У задачи может быть указано время запуска (опциональный параметр). Если параметр указан, то задача стартует в указанный временной период.
-- У задачи может быть указан параметр количества рестартов (опциональный параметр). Если в ходе выполнения задачи произошёл сбой или задачи-зависимости не были выполнены, то задача будет перезапущена указанное количество раз. Если параметр не указан, то количество рестартов равно 0.
-- У задачи может быть указаны зависимости — задача или задачи, от которых зависит её выполнение (опциональный параметр). Если параметр указан, то задача не может стартовать до момента, пока не будут завершены задачи-зависимости.</p>
+<p>Условия и требования:</p>
+<ul>
+<li>У задачи может быть указана длительность выполнения (опциональный параметр). Если параметр указан, то задача прекращает выполняться, если время выполнения превысило указанный параметр.</li>
+<li>У задачи может быть указано время запуска (опциональный параметр). Если параметр указан, то задача стартует в указанный временной период.</li>
+<li>У задачи может быть указан параметр количества рестартов (опциональный параметр). Если в ходе выполнения задачи произошёл сбой или задачи-зависимости не были выполнены, то задача будет перезапущена указанное количество раз. Если параметр не указан, то количество рестартов равно 0.</li>
+<li>У задачи может быть указаны зависимости — задача или задачи, от которых зависит её выполнение (опциональный параметр). Если параметр указан, то задача не может стартовать до момента, пока не будут завершены задачи-зависимости.</li>
+</ul>
 <p><strong>3. Проверить работу планировщика на различных задачах.</strong></p>
-<p>Условия и требования:
-- работа с файловой системой: создание, удаление, изменение директорий и файлов;
-- работа с файлами: создание, чтение, запись;
-- работа с сетью: обработка ссылок (GET-запросы) и анализ полученного результата;
-- описать конвеер выполнения основной задачи минимум из 3 задач, зависящих друг от друга и выполняющихся последовательно друг за другом.</p>
+<p>Условия и требования:</p>
+<ul>
+<li>работа с файловой системой: создание, удаление, изменение директорий и файлов;</li>
+<li>работа с файлами: создание, чтение, запись;</li>
+<li>работа с сетью: обработка ссылок (GET-запросы) и анализ полученного результата;</li>
+<li>описать конвеер выполнения основной задачи минимум из 3 задач, зависящих друг от друга и выполняющихся последовательно друг за другом.</li>
+</ul>
 <h2 id="_4">Требования к решению</h2>
 <ol>
 <li>Используйте корутины и генераторы, изученные в теоретической части.</li>
@@ -589,7 +595,7 @@
 <li>Используйте примитивы синхронизации, например, <a href="https://docs.python.org/3/library/threading.html#timer-objects">Timer</a> или <a href="https://docs.python.org/3/library/threading.html#condition-objects">Condition</a>.</li>
 <li>По возможности, решение должно полностью строиться на использовании корутин.</li>
 </ol>
-<p>Схематично сервис представлен на <a href="schema.png">диаграмме</a>{target="_blank"}.
+<p>Схематично сервис представлен на <a href="schema.png">диаграмме</a>.
 <img alt="image" src="schema.png" /></p>
 
 
