diagram is added as png also. example.tsv is enhanced.

--- a/site/job/index.html
+++ b/site/job/index.html
@@ -265,7 +265,7 @@
         
   
   <span class="md-ellipsis">
-    class Scheduler (Планировщик)
+    Scheduler and _Scheduler (Планировщик)
   </span>
   
 
