--- a/site/mkdocs-basics/index.html
+++ b/site/mkdocs-basics/index.html
@@ -263,7 +263,7 @@
         
   
   <span class="md-ellipsis">
-    class Scheduler (Планировщик)
+    Scheduler and _Scheduler (Планировщик)
   </span>
   
 
