--- a/site/backup-spreadsheet/index.html
+++ b/site/backup-spreadsheet/index.html
@@ -310,7 +310,7 @@
         
   
   <span class="md-ellipsis">
-    class Scheduler (Планировщик)
+    Scheduler and _Scheduler (Планировщик)
   </span>
   
 
@@ -489,8 +489,8 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align: left;">power_01</td>
-<td style="text-align: left;">PROGRESS</td>
+<td style="text-align: left;">create_files_01</td>
+<td style="text-align: left;">READY</td>
 <td style="text-align: left;">ASAP</td>
 <td style="text-align: right;">-1</td>
 <td style="text-align: right;">1</td>
@@ -498,21 +498,21 @@
 <td style="text-align: left;">b'bytes'</td>
 </tr>
 <tr>
-<td style="text-align: left;">power_02</td>
+<td style="text-align: left;">modify_files_01</td>
 <td style="text-align: left;">PROGRESS</td>
 <td style="text-align: left;">2024-01-06 17:54:54.436528</td>
 <td style="text-align: right;">16</td>
 <td style="text-align: right;">6</td>
-<td style="text-align: left;">('power_01',)</td>
+<td style="text-align: left;">('create_files_01',)</td>
 <td style="text-align: left;">b'bytes'</td>
 </tr>
 <tr>
-<td style="text-align: left;">power_03</td>
+<td style="text-align: left;">read_files_01</td>
 <td style="text-align: left;">PROGRESS</td>
 <td style="text-align: left;">2024-01-06 17:55:02.436568</td>
 <td style="text-align: right;">8</td>
 <td style="text-align: right;">3</td>
-<td style="text-align: left;">('power_01', 'power_02')</td>
+<td style="text-align: left;">('create_files_01', 'modify_files_01')</td>
 <td style="text-align: left;">b'bytes'</td>
 </tr>
 </tbody>
