--- a/site/tests/index.html
+++ b/site/tests/index.html
@@ -265,7 +265,7 @@
         
   
   <span class="md-ellipsis">
-    class Scheduler (Планировщик)
+    Scheduler and _Scheduler (Планировщик)
   </span>
   
 
